# TestPilotAI

./: .cursorrules  .env.example  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  OPEN_SOURCE_CHECKLIST.md  PROGRESS.md  README.md  README_zh.md  Untitled  _backup.ps1  _check_db.sh  _db_check2.py  _fix_memo.py  _test_auth.py  backup.bat  build_log.txt  cli.py  deploy-web.ps1  docker-compose.android.yml  docker-compose.yml  fix_alembic_version.py  lock_output.txt  main.py  mcp_config.example.json  package.json  prompt_8130af18-4e01-4f8f-96d0-c1829609461a_20260401_193237.md  pyproject.toml  run_blind_test.js  run_blueprint_node.js  run_mcp.py  run_miniprogram_blueprint.py  start_engine.sh  test_connect.js  test_nav_methods.js  test_output.txt  (+11 more)
.github/: copilot-instructions.md
.windsurf/: rules.md
alembic/: env.py
demo-app/: index.html  testpilot.json
deploy/: README.md  fix_nginx.py  nginx-testpilot.conf  setup-server.sh  testpilot-api.service
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop-demo/: check_ui.ps1  notepad_app.py  test_pywinauto.py  testpilot.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: blueprint-prompt-android.md  blueprint-prompt-desktop.md  blueprint-prompt-golden-rules.md  blueprint-prompt-ios.md  blueprint-prompt-miniprogram.md  blueprint-prompt-web.md  desktop-blueprint-spec.md  ide-rules-injection-map.md  ide-rules-template.md  miniprogram-blueprint-prompt.md  (+1 more)
mobile-demo/: app.js  (+2 more)
(+315 files in other folders)
