[tool.poetry]
package-mode = false

[project]
name = "testpilot-ai"
version = "0.1.0"
description = "AI驱动的自动化测试机器人 - 像人类一样操作UI、发现Bug、自动修复"
authors = [
    {name = "TestPilot AI Team"}
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "docker (>=7.1.0,<8.0.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "websockets (>=16.0,<17.0)",
    "openai (>=2.24.0,<3.0.0)",
    "mcp (>=1.26.0,<2.0.0)",
    "sqlalchemy (>=2.0,<3.0)",
    "passlib[bcrypt] (>=1.7,<2.0)",
    "python-jose[cryptography] (>=3.3,<4.0)",
    "python-multipart (>=0.0.9,<1.0)",
    "psutil (>=5.9,<8.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "pywinauto (>=0.6.9,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
