[package]
name = "testpilot-ai"
version = "1.0.0"
description = "TestPilot AI 桌面应用"
authors = ["TestPilot AI"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
